further implement handleStoredQuery and filterAndCreateStoredQueries