@@ -8,26 +8,22 @@
 package de.ii.ogcapi.mcp.app;
 
 import de.ii.ogcapi.collections.queryables.domain.QueryParameterTemplateQueryable;
+import de.ii.ogcapi.features.search.domain.QueryParameterTemplateParameterView;
 import de.ii.ogcapi.features.search.domain.StoredQueryExpression;
 import de.ii.ogcapi.foundation.domain.ApiEndpointDefinition;
 import de.ii.ogcapi.foundation.domain.ApiOperation;
 import de.ii.ogcapi.foundation.domain.EndpointExtension;
 import de.ii.ogcapi.foundation.domain.ExtensionRegistry;
-import de.ii.ogcapi.foundation.domain.HttpMethods;
 import de.ii.ogcapi.foundation.domain.OgcApiDataV2;
 import de.ii.ogcapi.foundation.domain.OgcApiQueryParameter;
 import de.ii.ogcapi.foundation.domain.OgcApiResource;
-import de.ii.ogcapi.foundation.domain.SchemaValidator;
 import de.ii.ogcapi.mcp.domain.ImmutableMcpTool;
 import de.ii.ogcapi.mcp.domain.McpConfiguration;
 import de.ii.ogcapi.mcp.domain.McpConfiguration.McpIncludeExclude;
-import de.ii.xtraplatform.jsonschema.domain.JsonSchemaInteger;
-import de.ii.xtraplatform.jsonschema.domain.JsonSchemaString;
-import io.swagger.v3.oas.models.media.IntegerSchema;
 import io.swagger.v3.oas.models.media.ObjectSchema;
 import io.swagger.v3.oas.models.media.Schema;
-import io.swagger.v3.oas.models.media.StringSchema;
 import java.util.HashMap;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
@@ -36,6 +32,10 @@ import java.util.stream.Collectors;
 import javax.ws.rs.HttpMethod;
 
 public class McpToolUtils {
+
+  private static String extractQueryId(String path) {
+    return path.substring(path.lastIndexOf('/') + 1);
+  }
 
   private static final String STORED_QUERY_PREFIX = "query_";
 
@@ -78,73 +78,22 @@ public class McpToolUtils {
     }
   }
 
-  public static class SimpleOgcApiQueryParameter implements OgcApiQueryParameter {
-
-    private final String name;
-    private final String title;
-    private final String description;
-    private final String type;
-    private final boolean required;
-
-    public SimpleOgcApiQueryParameter(
-        String name, String title, String description, String type, boolean required) {
-      this.name = name;
-      this.title = title;
-      this.description = description;
-      this.type = type;
-      this.required = required;
-    }
-
-    @Override
-    public String getName() {
-      return name;
-    }
-
-    @Override
-    public boolean getRequired(OgcApiDataV2 apiData, Optional<String> collectionId) {
-      return required;
-    }
-
-    @Override
-    public String getDescription() {
-      return description;
-    }
-
-    @Override
-    public Schema<?> getSchema(OgcApiDataV2 apiData, Optional<String> collectionId) {
-      Schema<?> s =
-          switch (type) {
-            case "integer" -> new IntegerSchema().title(title).description(description);
-            case "string" -> new StringSchema().title(title).description(description);
-            default -> new StringSchema().title(title).description(description);
-          };
-      return s;
-    }
-
-    @Override
-    public boolean matchesPath(String definitionPath) {
-      return false;
-    }
-
-    @Override
-    public boolean isApplicable(OgcApiDataV2 apiData, String path, HttpMethods method) {
-      return true;
-    }
-
-    @Override
-    public boolean isApplicable(
-        OgcApiDataV2 apiData, String path, String collectionId, HttpMethods method) {
-      return true;
-    }
-
-    @Override
-    public SchemaValidator getSchemaValidator() {
-      return (schemaJson, valueJson) -> Optional.empty();
-    }
-  }
-
   public static StoredQueriesResult filterAndCreateStoredQueries(
-      List<StoredQueryExpression> storedQueries, McpConfiguration mcpConfiguration) {
+      List<StoredQueryExpression> storedQueries,
+      McpConfiguration mcpConfiguration,
+      ExtensionRegistry extensionRegistry,
+      OgcApiDataV2 apiData) {
+
+    List<ApiEndpointDefinition> definitions =
+        extensionRegistry.getExtensionsForType(EndpointExtension.class).stream()
+            .filter(endpoint -> endpoint.isEnabledForApi(apiData))
+            .map(endpoint -> endpoint.getDefinition(apiData))
+            .filter(
+                def ->
+                    def.getResources().values().stream()
+                        .flatMap(res -> res.getOperations().values().stream())
+                        .anyMatch(op -> op.getOperationId().contains("executeStoredQuery")))
+            .toList();
 
     Optional<McpIncludeExclude> includedOpt = mcpConfiguration.getIncluded();
     Optional<McpIncludeExclude> excludedOpt = mcpConfiguration.getExcluded();
@@ -152,9 +101,6 @@ public class McpToolUtils {
     List<String> includedQueries = includedOpt.map(McpIncludeExclude::getQueries).orElse(null);
     List<String> excludedQueries = excludedOpt.map(McpIncludeExclude::getQueries).orElse(List.of());
 
-    // -------------------------------
-    // Filtering
-    // -------------------------------
     List<StoredQueryExpression> filteredQueries;
 
     if ((includedQueries == null || includedOpt.isEmpty()) && excludedQueries.isEmpty()) {
@@ -183,82 +129,82 @@ public class McpToolUtils {
               .toList();
     }
 
-    // -------------------------------
-    // Build result containers
-    // -------------------------------
-    Map<String, List<OgcApiQueryParameter>> paramsByQuery = new HashMap<>();
+    Map<String, OgcApiResource> resourceMapByQueryId =
+        definitions.stream()
+            .flatMap(def -> def.getResources().values().stream())
+            .filter(
+                resource -> {
+                  String queryId = extractQueryId(resource.getPath());
+                  return filteredQueries.stream().anyMatch(query -> query.getId().equals(queryId));
+                })
+            .collect(
+                Collectors.toMap(
+                    resource -> extractQueryId(resource.getPath()), resource -> resource));
+
+    Map<String, List<OgcApiQueryParameter>> queryParametersByQuery =
+        resourceMapByQueryId.entrySet().stream()
+            .collect(
+                Collectors.toMap(
+                    Map.Entry::getKey,
+                    entry -> {
+                      List<OgcApiQueryParameter> parameters =
+                          entry.getValue().getOperations().values().stream()
+                              .flatMap(op -> op.getQueryParameters().stream())
+                              .filter(
+                                  param ->
+                                      "limit".equals(param.getName())
+                                          || "offset".equals(param.getName())
+                                          || param instanceof QueryParameterTemplateParameterView)
+                              .collect(Collectors.toList());
+
+                      Map<String, OgcApiQueryParameter> uniqueParams = new LinkedHashMap<>();
+                      for (OgcApiQueryParameter param : parameters) {
+                        if ("limit".equals(param.getName())) {
+                          if (!(param.getSchema(apiData, Optional.empty())
+                              instanceof io.swagger.v3.oas.models.media.IntegerSchema)) {
+                            continue;
+                          }
+                        }
+                        uniqueParams.put(param.getName(), param);
+                      }
+                      return List.copyOf(uniqueParams.values());
+                    }));
+
     List<ImmutableMcpTool> tools =
-        filteredQueries.stream()
+        queryParametersByQuery.entrySet().stream()
             .map(
-                query -> {
-                  String queryId = query.getId() != null ? query.getId() : "unknown";
-                  String title = query.getTitle().orElse(queryId);
-                  String description = query.getDescription().orElse("");
+                entry -> {
+                  String queryId = entry.getKey();
+                  List<OgcApiQueryParameter> parameters = entry.getValue();
 
-                  // Extract schema from StoredQuery parameters
-                  Map<String, Schema<?>> parameterProperties =
-                      query.getParameters().entrySet().stream()
-                          .collect(
-                              Collectors.toMap(
-                                  Entry::getKey,
-                                  entry -> {
-                                    Object schema = entry.getValue();
-                                    Schema<?> swaggerSchema;
-
-                                    if (schema instanceof JsonSchemaString s) {
-                                      swaggerSchema =
-                                          new StringSchema()
-                                              .title(s.getTitle().orElse(null))
-                                              .description(s.getDescription().orElse(null))
-                                              .pattern(s.getPattern().orElse(null));
-                                      s.getDefault_().ifPresent(swaggerSchema::setDefault);
-                                    } else if (schema instanceof JsonSchemaInteger i) {
-                                      swaggerSchema =
-                                          new io.swagger.v3.oas.models.media.IntegerSchema()
-                                              .title(i.getTitle().orElse(null))
-                                              .description(i.getDescription().orElse(null));
-                                      i.getDefault_().ifPresent(swaggerSchema::setDefault);
-                                    } else {
-                                      swaggerSchema = new ObjectSchema();
-                                    }
-                                    return swaggerSchema;
-                                  }));
-                  System.out.println(
-                      "Parameter Properties for " + queryId + ": " + parameterProperties);
-
-                  // Convert to query parameters
-                  List<OgcApiQueryParameter> queryParameters =
-                      parameterProperties.entrySet().stream()
-                          .map(
-                              entry ->
-                                  new SimpleOgcApiQueryParameter(
-                                      entry.getKey(),
-                                      entry.getValue().getTitle(),
-                                      entry.getValue().getDescription(),
-                                      entry.getValue().getType(),
-                                      false))
-                          .collect(Collectors.toList());
-
-                  paramsByQuery.put(STORED_QUERY_PREFIX + queryId, queryParameters);
-                  System.out.println(
-                      "Stored Query Parameters for " + queryId + ": " + queryParameters);
-                  System.out.println("paramsByQuery" + paramsByQuery);
-
-                  // Input schema for the tool
                   ObjectSchema inputSchema = new ObjectSchema();
-                  inputSchema.setProperties((Map) parameterProperties);
+                  parameters.forEach(
+                      param -> {
+                        Schema<?> schema = param.getSchema(apiData, Optional.empty());
+                        if (schema != null) {
+                          inputSchema.addProperty(param.getName(), schema);
+                        }
+                      });
+
+                  if (inputSchema.getProperties() == null
+                      || inputSchema.getProperties().isEmpty()) {
+                    throw new IllegalStateException(
+                        "Cannot create McpTool for queryId "
+                            + queryId
+                            + ": inputSchema is missing");
+                  }
 
                   return new ImmutableMcpTool.Builder()
                       .id(STORED_QUERY_PREFIX + queryId)
-                      .name("Stored Query - " + title)
-                      .description(description)
+                      .name("Stored Query - " + queryId)
+                      .description("Tool for stored query: " + queryId)
                       .inputSchema(inputSchema)
-                      .queryParameters(queryParameters)
+                      .queryParameters(parameters)
                       .build();
                 })
-            .collect(Collectors.toList());
+            .toList();
 
-    return new StoredQueriesResult(tools, paramsByQuery);
+    return new StoredQueriesResult(tools, queryParametersByQuery);
   }
 
   public static CollectionsResult filterAndCreateCollections(
@@ -303,7 +249,7 @@ public class McpToolUtils {
 
                   return included && !excluded;
                 })
-            .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
+            .collect(Collectors.toMap(Entry::getKey, Entry::getValue));
 
     // Map: CollectionId -> List of filtered query parameters
     Map<String, List<OgcApiQueryParameter>> queryParametersByCollection =
@@ -323,7 +269,7 @@ public class McpToolUtils {
                                         || param instanceof QueryParameterTemplateQueryable)
                             .collect(Collectors.toList())));
 
-    System.out.println("queryParametersByCollection" + queryParametersByCollection);
+    //  System.out.println("queryParametersByCollection" + queryParametersByCollection);
 
     Map<String, Schema<?>> globalParameters = new HashMap<>();
 
@@ -353,7 +299,7 @@ public class McpToolUtils {
         collectionMap.entrySet().stream()
             .collect(
                 Collectors.toMap(
-                    Map.Entry::getKey,
+                    Entry::getKey,
                     e -> {
                       Map<String, Schema<?>> props = new HashMap<>(globalParameters);
                       List<OgcApiQueryParameter> params =
@@ -369,8 +315,7 @@ public class McpToolUtils {
                       return schema;
                     }));
 
-    for (Map.Entry<String, List<OgcApiQueryParameter>> entry :
-        queryParametersByCollection.entrySet()) {
+    for (Entry<String, List<OgcApiQueryParameter>> entry : queryParametersByCollection.entrySet()) {
       ObjectSchema objectSchema = new ObjectSchema();
       for (OgcApiQueryParameter param : entry.getValue()) {
         Schema<?> schema = param.getSchema(apiData, Optional.empty());
@@ -381,6 +326,8 @@ public class McpToolUtils {
       }
       collections.put(entry.getKey(), objectSchema);
     }
+
+    // System.out.println("queryParametersByCollection" + queryParametersByCollection);
 
     return new CollectionsResult(collections, queryParametersByCollection);
   }
